Fixes to spacing on front page

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -1,6 +1,6 @@
 .article
   color: #333
-  margin: 0 0 40px 0
+  margin: 0 0 20px 0
   @media mq-mobile
     width: 100% !important
   @media mq-tablet
